--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -27,12 +27,19 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-annotation</artifactId>
             <version>3.0.4</version>
             <scope>compile</scope>
         </dependency>
+
     </dependencies>
 
 </project>
