--- a/pom.xml
+++ b/pom.xml
@@ -21,17 +21,38 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <java.version>1.8</java.version>
+        <junit.version>4.12</junit.version>
+        <jackson.version>2.9.0</jackson.version>
+        <fastjson.version>1.2.47</fastjson.version>
+        <jedis.version>2.9.0</jedis.version>
+        <json-lib.version>2.4</json-lib.version>
+        <commons-lang.version>2.6</commons-lang.version>
+        <commons-io.version>2.4</commons-io.version>
+        <commons-beanutils.version>1.9.1</commons-beanutils.version>
+        <commons-httpclient.version>3.1</commons-httpclient.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
+        <commons-codec.version>1.9</commons-codec.version>
+        <commons-fileupload.version>1.3.2</commons-fileupload.version>
+        <mybaitsplus.version>3.0.4</mybaitsplus.version>
+        <c3p0.version>0.9.1.2</c3p0.version>
+        <aliyun-sdk-oss.version>2.8.3</aliyun-sdk-oss.version>
+        <alists.version>3.0.0</alists.version>
+        <aliyuncore.version>3.7.1</aliyuncore.version>
+        <ons-client.version>1.8.0.Final</ons-client.version>
+        <jxl.version>2.6.10</jxl.version>
+        <mail.version>1.4.7</mail.version>
         <springboot.version>2.1.1.RELEASE</springboot.version>
         <springboot.mybatis.version>1.3.2</springboot.mybatis.version>
-        <mybaitsplus.version>3.0.4</mybaitsplus.version>
         <lombok.version>1.18.0</lombok.version>
+        <pagehelper.version>5.0.0</pagehelper.version>
         <mysql.version>8.0.13</mysql.version>
         <druid.start.version>1.1.10</druid.start.version>
         <pagehelper.boot.version>1.2.5</pagehelper.boot.version>
-        <junit.version>4.12</junit.version>
-        <fastjson.version>1.2.47</fastjson.version>
-        <maven.test.skip>true</maven.test.skip>
+        <dataformat.yaml.version>2.9.6</dataformat.yaml.version>
+        <rocketmq.version>4.3.2</rocketmq.version>
+        <guava.version>27.0.1-jre</guava.version>
+        <pinyin4j.version>2.5.1</pinyin4j.version>
+        <httpclient.version>4.5.3</httpclient.version>
     </properties>
 
     <dependencyManagement>
@@ -88,11 +109,60 @@
             </dependency>
 
             <!-- json -->
+
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
             </dependency>
+
+
+            <!-- 工具集 -->
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${commons-lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons-beanutils.version}</version>
+            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>commons-httpclient</groupId>-->
+                <!--<artifactId>commons-httpclient</artifactId>-->
+                <!--<version>${commons-httpclient.version}</version>-->
+            <!--</dependency>-->
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>${commons-collections.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>${commons-fileupload.version}</version>
+            </dependency>
+
+
+            <!--HttpClient-->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+
+
 
         </dependencies>
     </dependencyManagement>
