Learn websocket package to use.

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${springboot.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-websocket</artifactId>
+                <version>${springboot.version}</version>
+            </dependency>
             <!--数据库相关-->
 
             <dependency>
