--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -61,7 +61,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.zx.starter.StarterApplication</mainClass>
+                    <mainClass>com.zx.starter.controller.main.StarterApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
