--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
                 <artifactId>spring-boot-starter-websocket</artifactId>
                 <version>${springboot.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>${springboot.version}</version>
+            </dependency>
             <!--数据库相关-->
 
             <dependency>
@@ -96,12 +101,6 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
                 <scope>runtime</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-jpa</artifactId>
-                <version>${springboot.jpa.version}</version>
             </dependency>
 
             <!-- quartz定时任务 -->
@@ -192,7 +191,7 @@
             <plugins>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugins</artifactId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${springboot.version}</version>
                 </plugin>
             </plugins>
