--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,11 @@
             </dependency>
 
             <!-- quartz定时任务 -->
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-quartz</artifactId>
                 <version>${springboot.version}</version>
-            </dependency>
+            </dependency>-->
 
             <!--    测试日志-->
             <dependency>
