--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -46,11 +46,11 @@
         </dependency>
 
         <!-- quartz -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
-
+-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
